[package]
name = "led-mcu"
version = "0.1.0"
authors = ["lseeger <leoseeger@proton.me>"]
edition = "2021"
resolver = "2"
rust-version = "1.77"

[[bin]]
name = "led-mcu"
harness = false # do not use the built in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = []

experimental = ["esp-idf-svc/experimental"]

[dependencies]
esp-idf-svc = { version = "0.49", features = ["critical-section", "embassy-time-driver", "embassy-sync"] }
anyhow = "1.0.93"
embedded-svc = "0.28.0"
esp-idf-hal="0.44.1"
toml-cfg = "0.2.0"
serde_json = "1.0.133"
serde = { version = "1.0.215", features = ["derive"] }
ws2812-esp32-rmt-driver = { version = "*", features = ["smart-leds-trait"] }
smart-leds-trait = "0.3.0"
smart-leds= "0.4.0"

[build-dependencies]
embuild = "0.32.0"
toml-cfg = "0.2.0"
